# mission_logic

./: README.md
mission_logic/: package.xml  setup.cfg  setup.py
mission_logic/config/: mission_logic.yaml  straight_wire.json
mission_logic/launch/: demo_real_signal.launch.py  demo_sim_signal.launch.py  mission_logic.launch.py
mission_logic/mission_logic/: geometry.py  magnetic_field_node.py  mission_node.py  models.py  old_field_sim.py  old_models.py  old_platform_sim_node.py  old_receiver_interfaces.py  old_receiver_sim_node.py  old_robot_adapter.py
mission_logic_msgs/: CMakeLists.txt  package.xml
mission_logic_msgs/msg/: SensorMsg.msg
