<?xml version="1.0"?>
<package format="3">
  <name>mission_logic_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for mission logic.</description>
  <maintainer email="white@todo.todo">white</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>